<resources>
    <string name="app_name">EATSDelivery</string>
    <string name="password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_register">Registrarse</string>
    <string name="username">Usuario</string>
    <string name="Registrarse">Registrarse</string>


    <string name="confPass">Confirmar contraseña</string>
    <string name="phone">Telefono</string>
    <string name="email">Email</string>
    <string name="direction">Direccion</string>
    <string name="name">Nombre completo</string>
    <string name="direccion">Direccion</string>
    <string name="paymethod">Agregar metodo de pago</string>
    <string name="confirm">Confirmar</string>
    <string name="cardnumber">Numero de tarjeta</string>
    <string name="cardholder">Nombre del propietario</string>
    <string name="back">Volver</string>
    <string name="cvc">CVC</string>
    <string name="expiredate">Fecha de expiracion</string>
    <string name="history">Historial pedidos</string>
    <string name="config">Configuraciones</string>
    <string name="adminDirec">Administrar direcciones</string>
    <string name="seeRest">Ver restaurantes</string>
    <string name="editProfile">Editar perfil</string>
    <string name="quit">Salir</string>
    <string name="cart">Ver carrito</string>
    <string name="slogan">Buena comida para buenos momentos!</string>
    <string name="productNameTemp">Nombre del producto</string>
    <string name="productInfoTemp">Esta es la informacion del producto</string>
    <string name="price">$9.99</string>
    <string name="number">117</string>
    <string name="plus">+</string>
    <string name="less">-</string>
    <string name="orderDetail">Los detalles de la compra se encuentran aqui</string>
    <string name="orderStatusMsg">Su pedido esta en proceso de preparacion y entrega :)</string>
    <string name="salir">Salir</string>
    <string name="selecciona_una_opci_n">Selecciona una opción:</string>
    <string name="todo">TODO</string>
    <string name="editar_men_restaurante">Editar menú restaurante</string>
    <string name="gestionar_pedidos">Gestionar Pedidos</string>
    <string name="solicitud_de_cierre">Solicitud de cierre</string>
    <string name="direcciones">Direcciones</string>
    <string name="textview">TextView</string>
    <string name="lista_de_pedidos">Lista de Pedidos</string>
    <string name="agregar_direcci_n">Agregar Dirección</string>


</resources>