<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductInfo">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productNameTemp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="72dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="191dp"
        android:layout_height="170dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"

        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/productInfo_productInfo"
        android:layout_width="280dp"
        android:layout_height="181dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/squarebox"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/productInfoTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/price_ProductInfo"
        android:layout_width="87dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/price"
        android:textSize="34sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productInfo_productInfo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="@string/number"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/price_ProductInfo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="162dp" />

    <Button
        android:id="@+id/button41"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/plus"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="593dp" />

    <Button
        android:id="@+id/button27"
        android:layout_width="72dp"
        android:layout_height="41dp"
        android:background="@drawable/custom_button"
        android:text="@string/less"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="593dp" />

    <Button
        android:id="@+id/button42"
        android:layout_width="91dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:onClick="back"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button48"
        android:layout_width="91dp"
        android:layout_height="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/custom_button"
        android:text="Agregar al carrito"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.916" />
</androidx.constraintlayout.widget.ConstraintLayout>